--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "latest-version": "^5.1.0",
     "reset-css": "^4.0.1"
   }
 }
