--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "latest-version": "^5.1.0",
+    "pkg.json": "^2.0.7",
     "reset-css": "^4.0.1"
   }
 }
