--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chokidar": "^2.1.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
+    "file-loader": "^4.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
